# desktop

./: .gitignore  CONVENTIONS.md  Cargo.toml  MANIFEST.md  README.md
.github/workflows/: build.yml  release.yml
assets/linux/: org.fumeapp.dbug.appdata.xml  org.fumeapp.dbug.desktop
assets/macos/: gen.sh
assets/macos/Dbug.app/Contents/: Info.plist
assets/macos/Dbug.app/Contents/Resources/: dbug.icns
assets/windows/: dbug.rc
docs/: example.rs
scripts/: build-macos.sh  build-windows-installer.sh  build-windows.sh  generate-icons.sh  package-linux.sh  package-macos.sh  release.sh  sign-macos.sh  sign-os.sh  staple.sh
src/: app.rs  gui.rs  highlighter.rs  main.rs  server.rs  settings.rs  storage.rs  storage_events.rs  storage_widget.rs  theme.rs
src/assets/: theme.toml
src/components/: custom_highlighter.rs  json_highlight.rs  mod.rs  modal.rs  payloads.rs  settings.rs  styles.rs
src/theme/: mod.rs  theme.rs  theme_helpers.rs  theme_utils.rs
