[package]
name = "dbug"
version = "0.1.0"
edition = "2021"

[dependencies]
iced = {  version = "0.13.1", features = ["svg"] }
sled = "0.34.7"
warp = "0.3.7"
tokio = {  version = "1.44.1", features = ["full"] }
serde_json = "1.0.140"
chrono = "0.4.40"
dirs = "6.0.0"
serde = { version = "1.0.219", features = ["derive"] }
