[package]
name = "dbug"
version = "0.1.0"
edition = "2021"

[dependencies]
iced = { git = "https://github.com/iced-rs/iced.git", branch = "master", features = [
  "lazy",
  "advanced",
  "tokio",
  "svg",
] }
warp = "0.3.7"
tokio = { version = "1.44.1", features = ["full"] }
serde_json = "1.0.140"
chrono = "0.4.40"
dirs = "6.0.0"
serde = { version = "1.0.219", features = ["derive"] }
futures = "0.3.31"
iced_core = { git = "https://github.com/iced-rs/iced.git", branch = "master" }
millisecond = "0.7.0"


[profile.ci]
inherits = "dev"
opt-level = 0

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

[target.'cfg(windows)'.dependencies]
image = "0.24.6"

[target.'cfg(windows)'.build-dependencies]
embed-resource = "3.0.2"
windows_exe_info = "0.4"